--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWN0dWFsLXNlYWwtOTMuY2xlcmsuYWNjb3VudHMuZGV2JA
 
 # Private Environment Variables
-CLERK_SECRET_KEY=''
+CLERK_SECRET_KEY=sk_test_483ou6BHMnj3quSZeU5PvaA2C6Q5o60f3k28wIg8FT
 MONGODB_URI=''
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
