connectamos la base de datos a la pagina web

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWN0dWFsLXNlYWwtOTMuY2xlcmsuYWNjb3VudH
 
 # Private Environment Variables
 CLERK_SECRET_KEY=sk_test_483ou6BHMnj3quSZeU5PvaA2C6Q5o60f3k28wIg8FT
-MONGODB_URI=''
+MONGODB_URI='mongodb+srv://EcomercePageNextJS:EcomercePageNextJS@cluster0.uacaviu.mongodb.net'
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
 # Cloudinary
